--- a/Views/Specializations/Index.cshtml
+++ b/Views/Specializations/Index.cshtml
@@ -7,8 +7,11 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
-</p>
+    @if (User.IsInRole("admin"))
+    {
+        <a asp-action="Create">Create New</a>
+    }
+    </p>
 <table class="table">
     <thead>
         <tr>
@@ -25,9 +28,15 @@
                 @Html.DisplayFor(modelItem => item.SpecializationName)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.SpecializationId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.SpecializationId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.SpecializationId">Delete</a>
+                @if (User.IsInRole("admin"))
+                {
+                    <a asp-action="Edit" asp-route-id="@item.SpecializationId">Edit</a> <h>|</h>
+                }
+                <a asp-action="Details" asp-route-id="@item.SpecializationId">Details</a>
+                @if (User.IsInRole("admin"))
+                {
+                    <h>|</h> <a asp-action="Delete" asp-route-id="@item.SpecializationId">Delete</a>
+                }
             </td>
         </tr>
 }
