--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,16 +27,26 @@
                         <li class="nav-item active">
                             <a class="nav-link" asp-area="" asp-controller="Trainers" asp-action="Index">Trainers</a>
                         </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" asp-area="" asp-controller="Clients" asp-action="Index">Clients</a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" asp-area="" asp-controller="GymMemberships" asp-action="Index">GymMemberships</a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" asp-area="" asp-controller="Specializations" asp-action="Index">Specializations</a>
-                        </li>
-                    </ul>
+                        @if (User.IsInRole("admin"))
+                        {
+                            <li class="nav-item active">
+                                <a class="nav-link" asp-area="" asp-controller="Clients" asp-action="Index">Clients</a>
+                            </li>
+
+                            <li class="nav-item active">
+                                <a class="nav-link" asp-area="" asp-controller="GymMemberships" asp-action="Index">GymMemberships</a>
+                            </li>
+                        }
+                            <li class="nav-item active">
+                                <a class="nav-link" asp-area="" asp-controller="Specializations" asp-action="Index">Specializations</a>
+                            </li>
+                            @if (User.IsInRole("admin"))
+                            {
+                                <li class="nav-item active">
+                                    <a class="nav-link" asp-area="" asp-controller="Roles" asp-action="Index">Roles</a>
+                                </li>
+                            }
+                        </ul>
                 </div>
             </div>
         </nav>
