--- a/Views/Trainers/Index.cshtml
+++ b/Views/Trainers/Index.cshtml
@@ -7,7 +7,10 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Add New Trainer</a>
+    @if (User.IsInRole("admin"))
+    {
+        <a asp-action="Create">Add New Trainer</a>
+    }
 </p>
 <table class="table">
     <thead>
@@ -49,9 +52,15 @@
                 @Html.DisplayFor(modelItem => item.Specialization.SpecializationName)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.TrainerId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.TrainerId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.TrainerId">Delete</a>
+                @if (User.IsInRole("admin"))
+                {
+                    <a asp-action="Edit" asp-route-id="@item.TrainerId">Edit</a> <h>|</h>
+                }
+                <a asp-action="Details" asp-route-id="@item.TrainerId">Details</a>
+                @if (User.IsInRole("admin"))
+                {
+                    <h>|</h> <a asp-action="Delete" asp-route-id="@item.TrainerId">Delete</a>
+                }
             </td>
         </tr>
 }
