--- a/Views/Gyms/Edit.cshtml
+++ b/Views/Gyms/Edit.cshtml
@@ -29,6 +29,16 @@
                 <span asp-validation-for="GymInfo" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="GeoLat" class="control-label"></label>
+                <input asp-for="GeoLat" class="form-control" />
+                <span asp-validation-for="GeoLat" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="GeoLong" class="control-label"></label>
+                <input asp-for="GeoLong" class="form-control" />
+                <span asp-validation-for="GeoLong" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
