--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,6 +13,6 @@
 }
 else
 {
-    <a asp-controller="Account" asp-action="Login">Вхід</a>
-    <a asp-controller="Account" asp-action="Register">Реєстація</a>
+    <a asp-controller="Account" asp-action="Login">Sign in</a>
+    <a asp-controller="Account" asp-action="Register">Registration</a>
 }
