--- a/Views/Trainers/Create.cshtml
+++ b/Views/Trainers/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Add";
 }
 
-<h1>Add New Trainer</h1>
+<h1>Add New Trainer to @ViewBag.GymName</h1>
 
 <hr />
 <div class="row">
@@ -21,10 +21,7 @@
                 <input asp-for="TrainerDateOfBirth" class="form-control" />
                 <span asp-validation-for="TrainerDateOfBirth" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="GymId" class="control-label"></label>
-                <select asp-for="GymId" class ="form-control" asp-items="ViewBag.GymId"></select>
-            </div>
+            <input type="hidden" value="@ViewBag.GymId" name="GymId" />
             <div class="form-group">
                 <label asp-for="TrainerSalary" class="control-label"></label>
                 <input asp-for="TrainerSalary" class="form-control" />
